feat: project ramp-up

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "files": [
-    "library.js",
-    "next.js",
+    "library.mjs",
+    "nestjs.mjs",
+    "nextjs.js",
     "react-internal.js"
   ],
   "devDependencies": {
