--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,15 +9,19 @@
     "start": "tsc && node dist/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "crypto-js": "^4.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
